--- a/static/amp/using-gatsby-image/index.html
+++ b/static/amp/using-gatsby-image/index.html
@@ -9,7 +9,7 @@
     <title>An Introduction To Using Gatsby Image</title>
     <meta charset="utf-8">
 
-    
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 
@@ -353,9 +353,9 @@ class BlogIndex extends React.Component {
     <script type="application/json">
         {
             "vars": {
-                "account": "UA-12345678-123"
+                "account": "UA-115990515-1"
             },
-            "triggers": ""
+            "triggers": {"trackEvent":{"on":"click","request":"event","selector":"body","vars":{"eventAction":"click","eventCategory":"body-click"}},"trackPageview":{"on":"visible","request":"pageview"}}
         }
     </script>
 </amp-analytics>
