amp meta descriptions

--- a/static/amp/form-handling-gatsby-netlify/index.html
+++ b/static/amp/form-handling-gatsby-netlify/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Easily handle forms for your Gatsby.js static website with Netlify. Works with most static site generators.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
