--- a/static/amp/gatbsy-with-contentful-cms/index.html
+++ b/static/amp/gatbsy-with-contentful-cms/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Blog site using Gatsby.js as the front-end and Contentful as the content management system. A super fast and modern React website example.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
