--- a/static/amp/hosting-your-static-website/index.html
+++ b/static/amp/hosting-your-static-website/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Hosting a static website has become fast, easy, and free. We&#39;ll explore options such as GitHub Pages, Surge.sh, and Netlify for deploying your next project.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
