--- a/static/amp/index.html
+++ b/static/amp/index.html
@@ -30,6 +30,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="">
+
     
     <link href="https://codebushi.com/index.xml" rel="alternate" type="application/rss+xml" title="Code Bushi" />
     <link href="https://codebushi.com/index.xml" rel="feed" type="application/rss+xml" title="Code Bushi" />
