--- a/static/amp/modern-static-website-portfolio/index.html
+++ b/static/amp/modern-static-website-portfolio/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="A digital portfolio is vital for any web developer. We&#39;ll explore some modern static site generators and free hosting solutions to get your personal site up and running.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
