--- a/static/amp/react-youtube-background/index.html
+++ b/static/amp/react-youtube-background/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Static website using Gatsby.js and React, using a YouTube video as the background.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
