--- a/static/amp/using-gatsby-image/index.html
+++ b/static/amp/using-gatsby-image/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Gatsby-image is a React component that works with Gatsby.js to give you an easy way to load and optimize images on a website.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
