--- a/static/amp/gatsby-featured-images/index.html
+++ b/static/amp/gatsby-featured-images/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Adding a cover or featured image to Gatsby.js blog posts.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
