--- a/static/amp/wordpress-to-gatsbyjs/index.html
+++ b/static/amp/wordpress-to-gatsbyjs/index.html
@@ -29,6 +29,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
+    <meta name="description" content="Moving from WordPress to Gatsby.js, a React.js static site generator.">
+
     
 
     <meta name="theme-color" content="#ff1d55" />
