--- a/static/amp/siteground-hostgator-wordpress-hosting/index.html
+++ b/static/amp/siteground-hostgator-wordpress-hosting/index.html
@@ -2,18 +2,15 @@
 <!DOCTYPE html>
 <html amp lang=en-us class=no-js>
 <head>
-<meta name=generator content="Hugo 0.27.1">
-<title>Code Bushi</title>
+<title>Siteground vs. Hostgator for Wordpress Hosting</title>
 <meta charset=utf-8>
 <script async custom-element=amp-analytics src=https://cdn.ampproject.org/v0/amp-analytics-0.1.js></script>
 <script async src=https://cdn.ampproject.org/v0.js></script>
 <link rel=amp-manifest href=/amp-manifest.json>
-<link rel=canonical href=https://codebushi.com/ >
+<link rel=canonical href=https://codebushi.com/siteground-hostgator-wordpress-hosting/ >
 <link rel=icon type=image/x-icon href=https://codebushi.com/favicon.ico>
 <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1">
-<meta name=description content="">
-<link href=https://codebushi.com/index.xml rel=alternate type=application/rss+xml title="Code Bushi">
-<link href=https://codebushi.com/index.xml rel=feed type=application/rss+xml title="Code Bushi">
+<meta name=description content="A real world comparison between Siteground and Hostgator for Wordpress hosting. A new Wordpress site was installed with each hosting provider and we ran various page speed tests to find the winner.">
 <meta name=theme-color content=#f72060>
 <script type=application/ld+json>
 {
@@ -47,6 +44,13 @@
           "@id": "https://codebushi.com/",
           "name": "home"
         }
+    },{
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@id": "https://codebushi.com/siteground-hostgator-wordpress-hosting/",
+          "name": "siteground-hostgator-wordpress-hosting"
+        }
     }]
 }
 </script>
@@ -57,19 +61,19 @@
   "author": {
     "name" : "Hunter Chang"
   },
-  "headline": "Code Bushi",
-  "description": "",
-  "wordCount": 0,
+  "headline": "Siteground vs. Hostgator for Wordpress Hosting",
+  "description": "A real world comparison between Siteground and Hostgator for Wordpress hosting. A new Wordpress site was installed with each hosting provider and we ran various page speed tests to find the winner.",
+  "wordCount": 667,
   "datePublished" : "2018-04-22",
   "dateModified" : "2018-04-22",
   "image" : {
       "@context": "http://schema.org",
       "@type": "ImageObject",
-      "url": "https://codebushi.com/amp/",
-      "height" : ,
-      "width" : 
+      "url": "https://codebushi.com/amp/./img/siteground-hostgator-hosting.jpg",
+      "height" : 503,
+      "width" : 920
     },
-  "mainEntityOfPage" : "https://codebushi.com/",
+  "mainEntityOfPage" : "https://codebushi.com/siteground-hostgator-wordpress-hosting/",
   "publisher" : {
     "@type": "Organization",
     "name" : "codebushi.com",
@@ -89,6 +93,80 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 </head>
 <body>
 <main>
+<h1>Siteground vs. Hostgator for Wordpress Hosting</h1>
+<div>
+<p><small>April 22, 2018</small></p>
+</div>
+<div>
+<p><amp-img src=https://codebushi.com/amp/./img/siteground-hostgator-hosting.jpg alt="" layout=responsive width=920 height=503></amp-img></p>
+</div>
+<div>
+<p>For as long as I can remember, I’ve been hosting my Wordpress sites with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a> without any major issues. They were the most popular option for Wordpress hosting at the time and their prices were very reasonable. Recently a friend of mine wanted to start a new Wordpress site so I looked into some new hosting options with him. I came across <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> a lot during my research and everyone kept raving about their speed and reliability. Since I’m no longer getting the cheapest prices anymore with Hostgator, I decided to try out Siteground and take advantage of their introductory offer.</p>
+<p>It seems like both companies have been in the hosting space for a long time, I was curious to see if Siteground was indeed faster than Hostgator. I decided to run a side by side comparison by creating two new Wordpress sites, putting one on my old Hostgator and the other on my new Siteground server. With Hostgator, I’m using their <a href="https://partners.hostgator.com/c/1225302/177309/3094?u=https%3A%2F%2Fwww.hostgator.com%2Fweb-hosting">“Baby Plan”</a> which is their mid-tier shared hosting plan with unlimited domains. I chose a similar option with Siteground, their <a href="https://www.siteground.com/web-hosting.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">“GrowBig”</a> plan which is also mid-tier shared hosting and unlimited domains.</p>
+<p>I also installed an identical theme on each site and configure the servers use the same php.ini configuration. The theme I chose was a free one called <a href=https://wordpress.org/themes/newsmag/ >NewsMag</a>. Here are the two sites:</p>
+<ul>
+<li><a href=http://hostgator.codebushi.com/ target=_blank>http://hostgator.codebushi.com/</a></li>
+<li><a href=http://siteground.codebushi.com/ target=_blank>http://siteground.codebushi.com/</a></li>
+</ul>
+<p>After installing the theme on each site and importing the dummy content, I ran a series of speed tests for each hosting provider. The website testing tools I used were:</p>
+<ul>
+<li><a href=https://tools.pingdom.com/ >Pingdom Tools</a></li>
+<li><a href=https://developers.google.com/speed/pagespeed/insights/ >PageSpeed Insights</a></li>
+<li><a href=https://gtmetrix.com/ >GTmetrix</a></li>
+<li><a href=https://www.webpagetest.org/ >WebPagetest</a></li>
+</ul>
+<p>The main thing I’m looking for is page load speeds because Google has stated many times that <a href=https://webmasters.googleblog.com/2018/01/using-page-speed-in-mobile-search.html>page speed</a> will be a factor in search rankings. Let’s check out the results.</p>
+<div class="row text-center mt-5">
+<div class=col-md-6>
+<p><strong>Hostgator Speed Test w/ Pingdom Tools</strong></p>
+<amp-img src=../img/hostgator-pingdom.png alt="Hostgator speed test - Pingdom" layout=responsive width=1000 height=1355></amp-img>
+</div>
+<div class=col-md-6>
+<p><strong>Siteground Speed Test w/ Pingdom Tools</strong></p>
+<amp-img src=../img/siteground-pingdom.png alt="Siteground speed test - Pingdom" layout=responsive width=1000 height=1354></amp-img>
+</div>
+</div>
+<p>As you can see, the page size and number of requests are identical since we have the exact same theme installed on each Wordpress site. The load times are pretty close, with Siteground being slightly faster (by 0.29 seconds). It seems like with Pingdom Tools, Siteground is just a tiny bit faster than Hostgator.</p>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> by a small margin</p>
+<div class="row text-center mt-5">
+<div class=col-md-6>
+<p><strong>Hostgator Optimization Test w/ Google PageSpeed</strong></p>
+<amp-img src=../img/hostgator-google.png alt="Hostgator optimization test - Google" layout=responsive width=1000 height=821></amp-img>
+</div>
+<div class=col-md-6>
+<p><strong>Siteground Optimization Test w/ Google PageSpeed</strong></p>
+<amp-img src=../img/siteground-google.png alt="Siteground optimization test - Google" layout=responsive width=1000 height=776></amp-img>
+</div>
+</div>
+<p>When testing Hostgator and Siteground using Google PageSpeed Insights, you can see a much bigger discrepancy with the mobile optimizations. The Wordpress site on Hostgator scored a 75 with mobile performance and has an optimization suggestion to “Reduce server response time.” The site on Siteground scored much better with mobile, a pretty impressive score of 90. This is a pretty important difference since Google is now rolling out their <a href=https://webmasters.googleblog.com/2018/03/rolling-out-mobile-first-indexing.html>mobile-first indexing</a> and you’ll want higher mobile performance in the future.</p>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a></p>
+<div class="row text-center mt-5">
+<div class=col-md-6>
+<p><strong>Hostgator Speed Test w/ GTmetrix</strong></p>
+<amp-img src=../img/hostgator-gt.png alt="Hostgator speed test - GTmetrix" layout=responsive width=1406 height=855></amp-img>
+</div>
+<div class=col-md-6>
+<p><strong>Siteground Speed Test w/ GTmetrix</strong></p>
+<amp-img src=../img/siteground-gt.png alt="Siteground speed test - GTmetrix" layout=responsive width=1000 height=608></amp-img>
+</div>
+</div>
+<p>Using GTmetrix, both Wordpress sites scored pretty much the same in all categories. The PageSpeed and YSlow scores were identical, so it seems like a tie for this test.</p>
+<p><strong>Winner:</strong> Tie</p>
+<div class="row text-center mt-5">
+<div class=col-md-6>
+<p><strong>Hostgator Site Test w/ WebPagetest</strong></p>
+<amp-img src=../img/hostgator-webpagetest.png alt="Hostgator site test - WebPagetest" layout=responsive width=1000 height=1240></amp-img>
+</div>
+<div class=col-md-6>
+<p><strong>Siteground Site Test w/ WebPagetest</strong></p>
+<amp-img src=../img/siteground-webpagetest.png alt="Siteground site test - WebPagetest" layout=responsive width=1000 height=1240></amp-img>
+</div>
+</div>
+<p>The load times with WebPagetest.org are longer than what we’ve seen previously, but there’s still a slight difference between Hostgator and Siteground. Not only is Siteground faster in load time, it’s also faster when rendering the first bytes of the website. This means that visitors to the Siteground site will see something on the screen just a little bit faster when compared to Hostgator.</p>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> by a small margin</p>
+<p>For the most part, the Siteground hosted Wordpress site was faster than Hostgator, but only by a small margin. The only test that presented a large discrepancy was the Google PageSpeed Insights with mobile optimization. If you just signed up with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a>, it’s probably not worth switching since you’ll have access to their low intro prices. However, if you’re no longer getting the low prices with Hostgator, then consider switching to <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> for better performance and get their low introductory prices.</p>
+<h4 class=mt-4><a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Sign up with Siteground</a></h4>
+</div>
 </main>
 <amp-analytics type=googleanalytics>
 <script type=application/json>
