--- a/static/amp/siteground-hostgator-wordpress-hosting/index.html
+++ b/static/amp/siteground-hostgator-wordpress-hosting/index.html
@@ -27,10 +27,10 @@
   "@type": "Organization",
   "name": "codebushi.com",
   "url": "https://codebushi.com/"
-  
+
   , "logo": "https://codebushi.com/codebushilogo.png"
-  
-  
+
+
 }
 </script>
 <script type=application/ld+json>
@@ -101,8 +101,8 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 <p><amp-img src=https://codebushi.com/amp/./img/siteground-hostgator-hosting.jpg alt="" layout=responsive width=920 height=503></amp-img></p>
 </div>
 <div>
-<p>For as long as I can remember, I’ve been hosting my Wordpress sites with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a> without any major issues. They were the most popular option for Wordpress hosting at the time and their prices were very reasonable. Recently a friend of mine wanted to start a new Wordpress site so I looked into some new hosting options with him. I came across <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> a lot during my research and everyone kept raving about their speed and reliability. Since I’m no longer getting the cheapest prices anymore with Hostgator, I decided to try out Siteground and take advantage of their introductory offer.</p>
-<p>It seems like both companies have been in the hosting space for a long time, I was curious to see if Siteground was indeed faster than Hostgator. I decided to run a side by side comparison by creating two new Wordpress sites, putting one on my old Hostgator and the other on my new Siteground server. With Hostgator, I’m using their <a href="https://partners.hostgator.com/c/1225302/177309/3094?u=https%3A%2F%2Fwww.hostgator.com%2Fweb-hosting">“Baby Plan”</a> which is their mid-tier shared hosting plan with unlimited domains. I chose a similar option with Siteground, their <a href="https://www.siteground.com/web-hosting.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">“GrowBig”</a> plan which is also mid-tier shared hosting and unlimited domains.</p>
+<p>For as long as I can remember, I’ve been hosting my Wordpress sites with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a> without any major issues. They were the most popular option for Wordpress hosting at the time and their prices were very reasonable. Recently a friend of mine wanted to start a new Wordpress site so I looked into some new hosting options with him. I came across <a href="https://www.siteground.com/go/hosting-compare">Siteground.com</a> a lot during my research and everyone kept raving about their speed and reliability. Since I’m no longer getting the cheapest prices anymore with Hostgator, I decided to try out Siteground and take advantage of their introductory offer.</p>
+<p>It seems like both companies have been in the hosting space for a long time, I was curious to see if Siteground was indeed faster than Hostgator. I decided to run a side by side comparison by creating two new Wordpress sites, putting one on my old Hostgator and the other on my new Siteground server. With Hostgator, I’m using their <a href="https://partners.hostgator.com/c/1225302/177309/3094?u=https%3A%2F%2Fwww.hostgator.com%2Fweb-hosting">“Baby Plan”</a> which is their mid-tier shared hosting plan with unlimited domains. I chose a similar option with Siteground, their <a href="https://www.siteground.com/go/hosting-compare">“GrowBig”</a> plan which is also mid-tier shared hosting and unlimited domains.</p>
 <p>I also installed an identical theme on each site and configure the servers use the same php.ini configuration. The theme I chose was a free one called <a href=https://wordpress.org/themes/newsmag/ >NewsMag</a>. Here are the two sites:</p>
 <ul>
 <li><a href=http://hostgator.codebushi.com/ target=_blank>http://hostgator.codebushi.com/</a></li>
@@ -127,7 +127,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 </div>
 </div>
 <p>As you can see, the page size and number of requests are identical since we have the exact same theme installed on each Wordpress site. The load times are pretty close, with Siteground being slightly faster (by 0.29 seconds). It seems like with Pingdom Tools, Siteground is just a tiny bit faster than Hostgator.</p>
-<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> by a small margin</p>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/go/hosting-compare">Siteground.com</a> by a small margin</p>
 <div class="row text-center mt-5">
 <div class=col-md-6>
 <p><strong>Hostgator Optimization Test w/ Google PageSpeed</strong></p>
@@ -139,7 +139,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 </div>
 </div>
 <p>When testing Hostgator and Siteground using Google PageSpeed Insights, you can see a much bigger discrepancy with the mobile optimizations. The Wordpress site on Hostgator scored a 75 with mobile performance and has an optimization suggestion to “Reduce server response time.” The site on Siteground scored much better with mobile, a pretty impressive score of 90. This is a pretty important difference since Google is now rolling out their <a href=https://webmasters.googleblog.com/2018/03/rolling-out-mobile-first-indexing.html>mobile-first indexing</a> and you’ll want higher mobile performance in the future.</p>
-<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a></p>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/go/hosting-compare">Siteground.com</a></p>
 <div class="row text-center mt-5">
 <div class=col-md-6>
 <p><strong>Hostgator Speed Test w/ GTmetrix</strong></p>
@@ -163,9 +163,9 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 </div>
 </div>
 <p>The load times with WebPagetest.org are longer than what we’ve seen previously, but there’s still a slight difference between Hostgator and Siteground. Not only is Siteground faster in load time, it’s also faster when rendering the first bytes of the website. This means that visitors to the Siteground site will see something on the screen just a little bit faster when compared to Hostgator.</p>
-<p><strong>Winner:</strong> <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> by a small margin</p>
-<p>For the most part, the Siteground hosted Wordpress site was faster than Hostgator, but only by a small margin. The only test that presented a large discrepancy was the Google PageSpeed Insights with mobile optimization. If you just signed up with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a>, it’s probably not worth switching since you’ll have access to their low intro prices. However, if you’re no longer getting the low prices with Hostgator, then consider switching to <a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Siteground.com</a> for better performance and get their low introductory prices.</p>
-<h4 class=mt-4><a href="https://www.siteground.com/index.htm?afcode=a3b8a147dc2f39afc11273a54b853a4f">Sign up with Siteground</a></h4>
+<p><strong>Winner:</strong> <a href="https://www.siteground.com/go/hosting-compare">Siteground.com</a> by a small margin</p>
+<p>For the most part, the Siteground hosted Wordpress site was faster than Hostgator, but only by a small margin. The only test that presented a large discrepancy was the Google PageSpeed Insights with mobile optimization. If you just signed up with <a href=https://partners.hostgator.com/c/1225302/177309/3094>Hostgator.com</a>, it’s probably not worth switching since you’ll have access to their low intro prices. However, if you’re no longer getting the low prices with Hostgator, then consider switching to <a href="https://www.siteground.com/go/hosting-compare">Siteground.com</a> for better performance and get their low introductory prices.</p>
+<h4 class=mt-4><a href="https://www.siteground.com/go/hosting-compare">Sign up with Siteground</a></h4>
 </div>
 </main>
 <amp-analytics type=googleanalytics>
